examples/negative/type_errors/L2/8_bool_var_case.ob
MODULE boolcase;

VAR y: INTEGER;
    b: BOOLEAN;

BEGIN
  b := TRUE;
  CASE b OF
    0..19: y := 0
  | 20: y := 1
  END
END boolcase.
